Private route and login redirect now working 🔥

--- a/your-app/public/index.html
+++ b/your-app/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <script src="https://kit.fontawesome.com/4420d99733.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Orbitron&display=swap"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
